Removed deprecated methods

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,11 +21,11 @@ annotations = "26.0.2"
 bstats = "3.1.0"
 commandApi = "10.1.2"
 fastUtil = "8.5.15"
-foliaScheduler = "0.7.4-SNAPSHOT"
+foliaScheduler = "0.7.2"
 gson = "2.13.1"
 hikariCp = "5.1.0"
 jsonSimple = "1.1.1"
-kotlin = "1.9.23"
+kotlin = "2.3.0-Beta2"
 spigotUpdateChecker = "3.0.4"
 xSeries = "13.3.1"
 
